# pigz-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
example/files/: alice.txt
include/pigz-cpp/: compressor.hpp  defaults.hpp  loader.hpp  pigz.hpp  types.hpp  utils.hpp
src/: compressor.cpp  loader.cpp  pigz.cpp  utils.cpp
test/: CMakeLists.txt  compressor_TEST.cpp  loader_TEST.cpp  pigzcpp_TEST.cpp  utils_TEST.cpp
test/files/: test.zlib
